CREATE TABLE IF NOT EXISTS address (
    nim VARCHAR(30) NOT NULL PRIMARY KEY,
    street TEXT,
    city VARCHAR(100),
    zip_code VARCHAR(10),
    country VARCHAR(30),
    created_at TIMESTAMPTZ DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMPTZ DEFAULT CURRENT_TIMESTAMP
);

CREATE INDEX IF NOT EXISTS address_nim_idx ON address (nim);
