CREATE TABLE IF NOT EXISTS grade_category (
    gc_id SERIAL PRIMARY KEY,
    category VARCHAR(100) NOT NULL
);
