CREATE TABLE IF NOT EXISTS study_program (
    study_program_id SERIAL PRIMARY KEY,
    study_program_name TEXT NOT NULL
)